feat: some neat open roles page

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,17 +7,17 @@
 }
 
 .theme-toggle path:nth-child(1) {
-  @apply fill-inherit stroke-inherit transition-colors;
+  @apply fill-inherit stroke-inherit transition-colors opacity-50 stroke-1;
 }
 
 .theme-toggle path:nth-child(n + 2) {
-  @apply fill-amber-500 stroke-amber-500 transition-colors;
+  @apply fill-amber-500 stroke-amber-500 transition-colors opacity-100 stroke-2;
 }
 
 :root[data-mode="dark"] .theme-toggle path:nth-child(1) {
-  @apply fill-blue-300 stroke-blue-300;
+  @apply stroke-blue-300 opacity-100 stroke-2;
 }
 
 :root[data-mode="dark"] .theme-toggle path:nth-child(n + 2) {
-  @apply fill-inherit stroke-inherit;
+  @apply fill-inherit stroke-inherit opacity-50 stroke-1;
 }
