feat: application submissions

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,9 +80,6 @@
 
   body {
     @apply bg-background text-foreground font-sans;
-  }
-
-  body {
     @apply isolate transition-colors duration-300 ease-in-out;
   }
 
@@ -121,4 +118,21 @@ svg.nudge-logo-svg .nudge-green {
 svg.nudge-logo-svg .nudge-blue {
   --nudge-blue: #239ED6;
   @apply fill-[var(--nudge-blue)];
+}
+
+.mixed-blur {
+  @apply h-[200%] bg-gradient-to-t from-background to-transparent backdrop-blur-sm backdrop-saturate-200;
+  mask-image: linear-gradient(
+    to bottom,
+    black 0% 50%,
+    transparent 50% 100%
+  );
+}
+
+.group:hover .monay-icon-circle {
+  @apply fill-yellow-500 transition-all duration-1000;
+}
+
+.group .monay-icon-circle {
+  @apply fill-primary;
 }
