--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -145,3 +145,52 @@ svg.nudge-logo-svg .nudge-blue {
     opacity: 1;
   }
 }
+
+@keyframes marquee-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+@keyframes marquee-right {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(50%);
+  }
+}
+
+.marquee-left {
+  animation: marquee-left 10s linear infinite;
+}
+
+.marquee-right {
+  animation: marquee-right 10s linear infinite;
+}
+
+.marquee-container {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap; /* So it doesn’t wrap text onto a new line */
+  position: relative;
+}
+
+.marquee-inner {
+  display: inline-block;
+  animation: marquee 10s linear infinite;
+}
+
+/* Keyframes for moving the text left continuously */
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  /* Translate left by 50% if the text is repeated twice. */
+  100% {
+    transform: translateX(-50%);
+  }
+}
